# dcrp-yt

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Justfile  README.md  build.ninja  cmake_install.cmake  compile_commands.json  dcrp  dcrp-win.json  dcrp-yt-setup.wxs  dcrp.json  updates.json
.cache/clangd/index/: main.cpp.9F219A554687A354.idx
extension/: background.js  dcrp-yt.js  manifest.json
extension/popup/: popup.html  popup.js
src/: main.cpp
